# social-timer

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  spin.toml
.github/workflows/: deploy.yaml
src/: app.rs  server.rs
style/: main.scss
